fix join and remove horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,12 @@
 
 /* transition: property 0.3s ease-in-out */
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--font-family), sans-serif;
   display: flex;
